--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
+    "json2csv": "^5.0.6",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
     "passport-jwt": "^4.0.0",
@@ -48,6 +49,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
+    "@types/json2csv": "^5.0.3",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
