--- a/react-admin/package.json
+++ b/react-admin/package.json
@@ -11,10 +11,14 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "^17.0.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "react-router-dom": "^6.0.2"
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
